# faers

./: .gitignore  README.md  environment.yml  process_faers.py  pyproject.toml  requirements.txt  setup.py
docs/: FAERS_Processing.md  usage.md
external_data/: README.md  country_codes.csv  drug_mappings.csv  occupation_codes.csv
external_data/manual_fixes/: countries.csv  dose_form_st.csv  dose_freq_st.csv  route_st.csv
external_data/meddra/: hlgt.asc  hlgt_hlt.asc  hlt.asc  hlt_pt.asc  llt.asc  pt.asc  pt_fixed.csv  soc.asc  soc_hlgt.asc
src/faers_processor/: __init__.py  __main__.py  cli.py
src/faers_processor/models/: faers_data.py
src/faers_processor/services/: deduplicator.py  downloader.py  processor.py  standardizer.py  validator.py
src/faers_processor/utils/: helpers.py
tests/: test_column_matching.py  test_processor.py  test_validator.py
