[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faers_processor"
version = "0.1.0"
description = "FDA Adverse Event Reporting System (FAERS) Data Processor"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "David Andrews" }
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "tqdm>=4.60.0",
    "dask>=2022.1.0",
    "vaex>=4.0.0",
    "pyarrow>=6.0.0",
    "requests>=2.25.0",
    "aiohttp>=3.7.0",
    "aiofiles>=0.6.0",
    "beautifulsoup4>=4.9.3",
    "lxml>=4.6.0",
    "python-dotenv>=0.15.0",
    "typing-extensions>=3.7.4",
    "pathlib>=1.0.1",
    "chardet>=4.0.0"
]

[project.scripts]
process-faers = "faers_processor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/faers_processor"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
